[gd_scene load_steps=8 format=3 uid="uid://cwb0nnj7np102"]

[ext_resource type="Texture2D" uid="uid://b7a4s04x21evb" path="res://assets/sprites/zones/backgrounds/spirit_valley_background.jpg" id="1_3ls1s"]
[ext_resource type="Script" uid="uid://c2piaspfbnqfd" path="res://scenes/game_systems/adventure/adventure_view/adventure_view.gd" id="1_176xw"]
[ext_resource type="PackedScene" uid="uid://bvgyusvjgbnbx" path="res://scenes/game_systems/adventure/adventure_tilemap/adventure_tilemap.tscn" id="2_176xw"]
[ext_resource type="PackedScene" uid="uid://dmknq0mniyrnn" path="res://scenes/game_systems/adventure/combat/combat_resource_manager/combat_resource_manager.tscn" id="2_bl004"]
[ext_resource type="StyleBox" uid="uid://bm4l2r4borncc" path="res://assets/styleboxes/zone_info_panel_main.tres" id="3_2xwr5"]
[ext_resource type="PackedScene" uid="uid://blofb5opg1kdu" path="res://scenes/game_systems/adventure/combat/adventure_combat/adventure_combat.tscn" id="5_a8cog"]

[sub_resource type="GDScript" id="GDScript_wwigy"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pressed.connect(func() : ActionManager.stop_action())
"

[node name="AdventureView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_176xw")

[node name="PlayerResourceManager" parent="." instance=ExtResource("2_bl004")]
unique_name_in_owner = true

[node name="TilemapView" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TilemapSubviewportContainer" type="SubViewportContainer" parent="TilemapView"]
clip_contents = true
layout_mode = 0
offset_left = -2.0
offset_right = 1918.0
offset_bottom = 1080.0

[node name="AdventureTilemapBackground" type="Sprite2D" parent="TilemapView/TilemapSubviewportContainer"]
z_index = -1
position = Vector2(963.49994, 555.49994)
scale = Vector2(0.7769531, 0.7951389)
texture = ExtResource("1_3ls1s")

[node name="SubViewport" type="SubViewport" parent="TilemapView/TilemapSubviewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="AdventureTilemap" parent="TilemapView/TilemapSubviewportContainer/SubViewport" instance=ExtResource("2_176xw")]
unique_name_in_owner = true

[node name="CombatView" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CombatSubviewportContainer" type="SubViewportContainer" parent="CombatView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1880.0
offset_bottom = 1040.0
grow_horizontal = 2
grow_vertical = 2

[node name="CombatBackground" type="Sprite2D" parent="CombatView/CombatSubviewportContainer"]
z_index = -1
position = Vector2(963.49994, 555.49994)
scale = Vector2(0.7769531, 0.7951389)
texture = ExtResource("1_3ls1s")

[node name="SubViewport" type="SubViewport" parent="CombatView/CombatSubviewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="AdventureCombat" parent="CombatView/CombatSubviewportContainer/SubViewport" instance=ExtResource("5_a8cog")]
unique_name_in_owner = true

[node name="CharacterInfoPanel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 496.0
offset_top = -476.0
offset_right = 896.0
offset_bottom = -276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_2xwr5")

[node name="Label" type="Label" parent="CharacterInfoPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 27.0
offset_right = 72.0
offset_bottom = 50.0
text = "TEST"

[node name="Label2" type="Label" parent="CharacterInfoPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 70.0
offset_bottom = 103.0
text = "TEST"

[node name="Label3" type="Label" parent="CharacterInfoPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 139.0
offset_right = 72.0
offset_bottom = 162.0
text = "TEST"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 1776.0
offset_top = 936.0
offset_right = 1840.0
offset_bottom = 1000.0
script = SubResource("GDScript_wwigy")

[node name="Button2" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 1696.0
offset_top = 935.0
offset_right = 1760.0
offset_bottom = 999.0
